# finledger

./: .gitignore  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  config.yaml.template  pyproject.toml
src/finledger/: cli.py
src/finledger/application/: preview_service.py  use_cases.py
src/finledger/domain/: exceptions.py  models.py  repositories.py  services.py
src/finledger/infrastructure/: config_service.py  statement_repository.py
tests/: conftest.py
tests/fixtures/: README.md  generate_fixtures.py
tests/integration/: test_end_to_end.py  test_ingestion.py  test_with_mocks.py
tests/unit/: test_config.py  test_models.py  test_preview_service.py  test_services.py  test_use_cases.py
